# parser

./: .dockerignore  .gitignore  Dockerfile  README.md  REPORT.md  crawl_idbins.py  docker-compose.yml  ocr_service.py  pyproject.toml  test_apple_vision_quality.py  vlm_service.py
.pipeline/: HANDOFF.md  REPORT.md  design-preprocessing.md  feedback-001.md  feedback-002.md  feedback-003.md  plan.md  requirement-phase2-5.md  requirement-queue-refactor.md  requirement.md  status.json
.pipeline/reviews/: code-review.md  plan-review.md
.pipeline/tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md
docforge/: __init__.py  __main__.py  cli.py  launcher.py
docforge/adapters/: __init__.py  apple_vision_engine.py  apple_vision_remote.py  cloud_vlm_engine.py  csv_reader.py  easyocr_engine.py  excel_reader.py  host_health.py  host_vlm_engine.py  image_converter.py  morpheme_analyzer.py  opencv_preprocessor.py  paddle_ocr.py  paddle_table.py  pdfplumber_tables.py  pymupdf_reader.py  region_crop.py  vision_llm_engine.py
docforge/domain/: __init__.py  ast_nodes.py  enums.py  models.py  ports.py  value_objects.py
docforge/infrastructure/: __init__.py  config.py  file_io.py  metadata.py  paths.py
docforge/processing/: __init__.py  adaptive_retry.py  ast_builder.py  ast_markdown_renderer.py  block_classifier.py  block_normalizer.py  block_quality_verifier.py  layout_router.py  (+29 more)
docs/: architecture.html
scripts/: benchmark.py
tests/: test_external_access.py  test_job_store.py  test_v1_api.py  test_v1_live.py  test_worker_split.py
(+185 files in other folders)
