[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docforge"
version = "2.0.0"
description = "Document-to-Markdown conversion tool with web GUI"
requires-python = ">=3.11"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pdfplumber>=0.11.0",
    "Pillow>=10.0.0",
    "markdown>=3.5.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
ocr = [
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
]
excel = [
    "openpyxl>=3.1.0",
]
morpheme = [
    "kiwipiepy>=0.18.0",
]
web = [
    "flask>=3.0.0",
]
cloud_vlm = [
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
docling = [
    "docling>=2.0.0",
    "docling-core>=2.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
all = [
    "docforge[ocr,excel,morpheme,web,cloud_vlm,build,dev]",
]

[project.scripts]
docforge = "docforge.cli:main"
docforge-gui = "docforge.launcher:main"

[tool.setuptools.packages.find]
include = ["docforge*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "ocr: marks tests requiring PaddleOCR",
]
